# e32on64

./: CMakeLists.txt
e32libc/: CMakeLists.txt  e32_libc.c
e32loader/: CMakeLists.txt  elf_loader.cpp  elf_loader.h  loader.cpp  loader.h
include/e32on64/: e32_defs.h
src/: CMakeLists.txt
src/e32libc/: e32_enter.c  e32_libc.c  e32_libc.h
src/e32loader/: CMakeLists.txt  elf.h  elf_printers.h  loader.cpp  loader.h  parser.cpp  parser.h
test/: CMakeLists.txt  e32libc_stdlib.cpp  e32loader_test.cpp  loader.cpp
test/32bit/: CMakeLists.txt  base1.c
